Pomodoro Dashboard - Pomodoro Dashboard Height Fix
Implemented height fix for pomodoro dashboard wherein minimum heist of 1080px is removed so that vertical scrollbar is not seen and for everything to be seen in a non-scroll necessary environment

- JV

--- a/src/css/layout.css
+++ b/src/css/layout.css
@@ -4,10 +4,6 @@
 
 */
 
-html {
-    min-height: 1080px;
-}
-
 header {
     height: 10vh;
 }
